[package]
name = "dilla-describer"
version = "1.0.1"
description = "Dilla describer engine to provide introspection."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
serde = { version = "1.0", default_features = false, features = ["derive"] }
serde_json = { version = "1.0", default_features = false, features = ["std"] }

[build-dependencies]
serde = "1.0"
serde_json = "1.0"
