[package]
name = "wasm-component"
version = "1.0.1"
description = "Dilla WASM Component Model (WASI)"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "doc-header.html"]

[features]
default = ["describer"]
describer = []
prettify = []
debug = []

[dependencies]
dilla-renderer = { path = "../dilla-renderer", default-features = false }
dilla-describer = { path = "../dilla-describer", default-features = false }
bitflags = "2.5"
wit-bindgen-rt = "0.24"
html-minifier = "^5.0"
serde_json = "^1.0"

[package.metadata.component]
package = "component:dilla-component"

[package.metadata.component.dependencies]
