[package]
name = "wasm-extism"
version = "1.0.0"
description = "Dilla WASM with Extism"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "doc-header.html"]

[features]
default = ["describer"]
describer = []
debug = []
prettify = []

[lib]
crate_type = ["cdylib"]

[dependencies]
dilla-renderer = { path = "../dilla-renderer", default-features = false }
dilla-describer = { path = "../dilla-describer", default-features = false }
html-minifier = "5.0"
extism-pdk = { version = "^1.0", default-features = false }